@startuml

title __CONTROLLER's Class Diagram__\n

    namespace Controller {
      abstract class Controller.Base.BaseController {
          {static} - apiClient : ApiClient
          + BaseController()
          {static} + getApiClient()
          + getContext()
          + getRouteListener()
          + setContext()
          + setRouteListener()
      }
    }
  

  
    namespace Controller {
      class Controller.Visitor.VisitorConsultationDrugsController {
          + ConsultationDrugsController()
          + onSearch()
      }
    }
  

  
    namespace Controller {
      class Controller.Visitor.VisitorConsultationPratitionnersController {
          + ConsultationPratitionnersController()
          + onSearch()
      }
    }
  

  
    namespace Controller {
      class Controller.Visitor.VisitorConsultationReportController {
          + ConsultationReportController()
          + getConsultationRapportVisiteModel()
          + getConsultationRapportVisiteView()
          + getRapportVisite()
          + loadRapportVisite()
          + setConsultationRapportVisiteModel()
          + setConsultationRapportVisiteView()
          + setRapportVisite()
      }
    }
  

  
    namespace Controller {
      class Controller.Visitor.VisitorConsultationReportsController {
          - listeners : Collection<ConsultationRapportVisitesListener>
          + ConsultationReportsController()
          + getConsultationRapportVisitesModel()
          + getConsultationRapportVisitesView()
          + onSearchSubmit()
          + setConsultationRapportVisitesModel()
          + setConsultationRapportVisitesView()
      }
    }
  

  
    namespace Controller {
      class Controller.LoginController {
          {static} - apiClient : ApiClient
          - gsbLogin : TextField
          - password : PasswordField
          + LoginController()
          + onSubmit()
      }
    }
  

  
    namespace Controller {
      class Controller.MainController {
          + MainController()
          + getView()
          + onDrugConsultation()
          + onError()
          + onNewReport()
          + onPratitionners()
          + onReportConsultation()
          + onReportConsultations()
          + setView()
          + userLoginSucess()
      }
    }
  

  
    namespace Controller {
      class Controller.Visitor.VisitorMenuController {
          + MenuController()
          + onConsulterClicked()
          + onDrugsClicked()
          + onNewReportClicked()
          + onPratitionnersClicked()
          + userLoginSucess()
      }
    }
  

  
    namespace Controller {
      class Controller.NewReportController {
          + NewReportController()
          + loadDrugsInView()
          + loadPratitionnerInView()
          + onSubmit()
          + onSubmitNewReport()
          + userLoginSucess()
      }
    }
  

  Controller.Base.BaseController o-- Model.Context : context
  Controller.Base.BaseController o-- Listener.RouteListener : routeListener
  Controller.Visitor.VisitorConsultationDrugsController .up.|> Listener.ConsultationDrugsViewListener
  Controller.Visitor.VisitorConsultationDrugsController -up-|> Controller.Base.BaseController
  Controller.Visitor.VisitorConsultationDrugsController o-- Model.ConsultationDrugsModel : consultationDrugsModel
  Controller.Visitor.VisitorConsultationDrugsController o-- View.component.ConsultationDrugsView : view
  Controller.Visitor.VisitorConsultationPratitionnersController .up.|> Listener.ConsultationPratitionnerViewListener
  Controller.Visitor.VisitorConsultationPratitionnersController -up-|> Controller.Base.BaseController
  Controller.Visitor.VisitorConsultationPratitionnersController o-- Model.ConsultationPratitionnersModel : consultationPratitionnersModel
  Controller.Visitor.VisitorConsultationPratitionnersController o-- View.component.ConsultationPratitionnersView : view
  Controller.Visitor.VisitorConsultationReportController -up-|> Controller.Base.BaseController
  Controller.Visitor.VisitorConsultationReportController o-- Model.ConsultationRapportVisiteModel : consultationRapportVisiteModel
  Controller.Visitor.VisitorConsultationReportController o-- View.component.ConsultationRapportVisiteView : consultationRapportVisiteView
  Controller.Visitor.VisitorConsultationReportController o-- Model.Report : rapportVisite
  Controller.Visitor.VisitorConsultationReportsController .up.|> Listener.ConsultationRapportVisitesListener
  Controller.Visitor.VisitorConsultationReportsController -up-|> Controller.Base.BaseController
  Controller.Visitor.VisitorConsultationReportsController o-- Model.ConsultationRapportVisitesModel : consultationRapportVisitesModel
  Controller.Visitor.VisitorConsultationReportsController o-- View.component.ConsultationRapportVisitesView : consultationRapportVisitesView
  Controller.LoginController .up.|> Listener.LoginListener
  Controller.LoginController -up-|> Controller.Base.BaseController
  Controller.LoginController o-- View.component.LoginView : loginView
  Controller.MainController .up.|> Listener.ContextListener
  Controller.MainController .up.|> Listener.RouteListener
  Controller.MainController -up-|> Controller.Base.BaseController
  Controller.MainController o-- Controller.Visitor.VisitorConsultationDrugsController : consultationDrugsController
  Controller.MainController o-- Controller.Visitor.VisitorConsultationPratitionnersController : consultationPratitionnersController
  Controller.MainController o-- Controller.Visitor.VisitorConsultationReportController : consultationReportController
  Controller.MainController o-- Controller.Visitor.VisitorMenuController : menuController
  Controller.MainController o-- Controller.NewReportController : newReportController
  Controller.MainController o-- View.component.MainView : view
  Controller.Visitor.VisitorMenuController .up.|> Listener.ContextListener
  Controller.Visitor.VisitorMenuController .up.|> Listener.MenuListener
  Controller.Visitor.VisitorMenuController -up-|> Controller.Base.BaseController
  Controller.Visitor.VisitorMenuController o-- View.component.MenuView : menuView
  Controller.NewReportController .up.|> Listener.ContextListener
  Controller.NewReportController .up.|> Listener.NewReportListener
  Controller.NewReportController -up-|> Controller.Base.BaseController
  Controller.NewReportController o-- View.component.FormReportView : view


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
